add dto interfaces
