# packages/server/src/modules/core/dto/account.dto.ts
@@ -1,23 +1,46 @@
 export interface CreateAccountDto {
-    id: string;
-    username: string;
-    nick: string;
+  avatar?: string;
+  email?: string;
+  mobile?: string;
+  username: string;
+  password: string;
+  nick: string;
 }
 
 export interface EditAccountDto {
-    id: string;
-    username: string;
-    nick: string;
+  id: string;
+  avatar?: string;
+  email?: string;
+  mobile?: string;
+  password?: string;
+  nick: string;
 }
 
 export interface AccountResponse {
-    id: string;
-    username: string;
-    nick: string;
+  username: string;
+  nick: string;
+  avatar: string;
+  type: string;
+  email: string;
+  mobile: string;
+  roles: string[];
+  isDisable: boolean;
+  isAdmin: boolean;
+  isApproved: boolean;
+  expired: Date;
 }
 
 export interface SessionUser {
-    id: string;
-    username: string;
-    nick: string;
+  id: string;
+  username: string;
+  nick: string;
+  avatar: string;
+  type: string;
+  email: string;
+  mobile: string;
+  roles: string[];
+  isDisable: boolean;
+  isAdmin: boolean;
+  isApproved: boolean;
+  expired: Date;
 }
