# packages/server/src/modules/core/dto/login.dto.ts
@@ -1,21 +1,21 @@
-export class LoginDto {
-    username: string;
-    password: string;
+export interface LoginDto {
+  username: string;
+  password: string;
 }
 
 export interface LocalStrategyInfo {
-    message: string;
+  message: string;
 }
 
 export interface LoginResponse {
-    name: string;
-    operator: string;
-    operatorIp: string;
-    operation: string;
-    comment: string;
+  name: string;
+  operator: string;
+  operatorIp: string;
+  operation: string;
+  comment: string;
 }
 
 export interface ProfileResponse {
-    id: string;
-    name: string;
+  id: string;
+  name: string;
 }
